@@ -1,4 +1,6 @@
 master
+- Mayhem
+  You can now drag replies in the dump list to reorder them.
 
 2.26.0
 - desuwa
